Logic rewritten. Massive refactoring.

--- a/Chords/Views/Home/ShowChord.cshtml
+++ b/Chords/Views/Home/ShowChord.cshtml
@@ -1,4 +1,4 @@
-﻿@model Chords.Models.Chord
+﻿@model Chords.ViewModels.ChordDecorator
 @{
     var otherSymbols = Model.Symbols.Skip(1);
     var parameters = ViewData["parameters"] as Chords.ViewModels.ShowChordParams;
