--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -4,7 +4,144 @@
    (Resources on iOS or Assets on Android), with the same Build Action 
    (BundleResource on iOS or AndroidAsset on Android), to be accessible 
    from a path starting at the root of your hybrid application.  */
-
+/*
 input {
     width: 100%;
+}
+*/
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+/* Wrapping element */
+/* Set some basic padding to keep content from hitting the edges */
+.body-content {
+    padding-top: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* Set widths on the form inputs since otherwise they're 100% wide */
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
+.chordlayout {
+    font-size: 0.9em;
+    font-weight: bold;
+}
+
+.chordschema {
+    font-face: monospace;
+    font-size: 0.8em;
+    margin-bottom: 20px;
+    cursor: default;
+}
+
+form select {
+    width: 90px;
+}
+
+.error {
+    color: red;
+}
+
+.incomplete {
+    color: dimgray;
+}
+
+.O {
+    color: blue;
+    font-weight: bold;
+}
+
+.X {
+    color: red;
+    font-weight: bold;
+}
+
+#layouts {
+    display: none;
+}
+
+/* Center the loader */
+#loader {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s;
+}
+
+@-webkit-keyframes animatebottom {
+    from {
+        bottom: -100px;
+        opacity: 0;
+    }
+
+    to {
+        bottom: 0px;
+        opacity: 1;
+    }
+}
+
+@keyframes animatebottom {
+    from {
+        bottom: -100px;
+        opacity: 0;
+    }
+
+    to {
+        bottom: 0;
+        opacity: 1;
+    }
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color: white;
 }
