Made the HTML mobile friendly. Better handling of orientation changes (still not perfect)

--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -14,12 +14,8 @@ body {
     padding-bottom: 20px;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-top: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
+.main-content {
+    padding-bottom: 30px;
 }
 
 /* Set widths on the form inputs since otherwise they're 100% wide */
