--- a/Chords.Android/Views/ShowChordResultView.cshtml
+++ b/Chords.Android/Views/ShowChordResultView.cshtml
@@ -1,7 +1,8 @@
 ﻿@inherits PortableRazor.ViewBase
 @model Chords.Android.Models.ShowChordResultModel
 @{
-    var otherSymbols = Model.ChordDecorator.Symbols.Skip(1);
+    var symbol = Model?.ChordDecorator?.Symbols[0];
+    var otherSymbols = Model.ChordDecorator != null ? Model.ChordDecorator.Symbols.Skip(1) : new string[0];
 }
 <!DOCTYPE html>
 <html>
@@ -19,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span class="navbar-brand">Guitar Chords</span>
+                <span class="navbar-brand">Show Chord</span>
             </div>
                 
             <div class="navbar-collapse collapse">
@@ -32,51 +33,57 @@
     </nav>
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content">
 
 		<!-- Main content start -->
-	    <h2>@Model.ChordDecorator.Symbols[0]</h2>
+        @if (Model.ChordDecorator != null)
+		{
+		    <h2>@symbol</h2>
 
-		@if (otherSymbols.Any())
-		{
-		    <h4>Other symbols:</h4>
-		    foreach(var otherSymbol in otherSymbols)
-		    {
-		        <span>@otherSymbol</span>
-		    }
-		}
-		<h4>Chord intervals:</h4>
-		<p>
-		@foreach(var interval in Model.ChordDecorator.Intervals)
-		{
-		    <span>@interval</span>
-		}
-		</p>
+			if (otherSymbols.Any())
+			{
+			    <h4>Other symbols:</h4>
+			    foreach(var otherSymbol in otherSymbols)
+			    {
+			        <span>@otherSymbol</span>
+			    }
+			}
+			<h4>Chord intervals:</h4>
+			<p>
+			@foreach(var interval in Model.ChordDecorator.Intervals)
+			{
+			    <span>@interval</span>
+			}
+			</p>
 
-		<h4>Chord notes:</h4>
-		<p>
-		@foreach(var note in Model.ChordDecorator.Notes)
-		{
-		    <span>@note</span>
+			<h4>Chord notes:</h4>
+			<p>
+			@foreach(var note in Model.ChordDecorator.Notes)
+			{
+			    <span>@note</span>
+			}
+			</p>
 		}
-		</p>
 		<div id="error" class="error">@Model.Error</div>
-		<div id="loader"></div>
-		<script>
-			$(document).ready(function (){
-                $.ajax({
-                    url: 'hybrid:ShowChordLayouts',
-                    type: 'get',
-                    data: {
-                        root: '@Model.Parameters["root"]',
-                        type: '@Model.Parameters["type"]',
-                        partial: '@Model.Parameters["partial"]',
-                        special: '@Model.Parameters["special"]',
-                        conv: '@Model.Parameters["conv"]'
-                    }
+        @if (string.IsNullOrEmpty(Model.Error))
+		{
+			<div id="loader"></div>
+			<script>
+				$(document).ready(function (){
+	                $.ajax({
+	                    url: 'hybrid:ShowChordLayouts',
+	                    type: 'get',
+	                    data: {
+	                        root: '@Model.Parameters["root"]',
+	                        type: '@Model.Parameters["type"]',
+	                        partial: '@Model.Parameters["partial"]',
+	                        special: '@Model.Parameters["special"]',
+	                        conv: '@Model.Parameters["conv"]'
+	                    }
+					});
 				});
-			});
-		</script>
+			</script>
+		}
         <!-- Main content end -->	
 
     </div>
