--- a/Chords.Android/Views/ShowChordView.cshtml
+++ b/Chords.Android/Views/ShowChordView.cshtml
@@ -5,6 +5,7 @@
 <head>
     <link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap-toggle.min.css" />
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -16,9 +17,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-				<span class="navbar-brand">Guitar Chords</span>
+                <span class="navbar-brand">Show Chord</span>
             </div>
-				
+                
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="hybrid:ShowChord">Show chord</a></li>
@@ -29,46 +30,101 @@
     </nav>
     <script src="jquery.min.js"></script>
 	<script src="bootstrap.min.js"></script>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+	<script src="bootstrap-toggle.min.js"></script>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content">
 
 		<!-- Main content start -->
+	    <nav class="navbar navbar-inverse">
+	        <div class="container">
+	            <div class="navbar-header">
+	                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-root-collapse">
+	                    <span class="sr-only">Toggle root</span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                </button>
+	                <span class="navbar-brand" id="navbar-root">@Model.Notes[Model.conv][1]</span>
+	            </div>
+	                
+	            <div class="navbar-root-collapse collapse">
+	                <ul class="nav navbar-nav">
+					@foreach(var note in @Model.Notes[Model.conv])
+					{
+                        <li><a onclick="updateRoot('@(note)');" data-toggle="collapse" data-target=".navbar-root-collapse">@note</a></li>
+					}
+	                </ul>
+	            </div>
+	        </div>
+	    </nav>
+        <nav class="navbar navbar-inverse">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-type-collapse">
+                        <span class="sr-only">Toggle chord type</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <span class="navbar-brand" id="navbar-type">Major</span>
+                </div>
+                    
+                <div class="navbar-type-collapse collapse">
+                    <ul class="nav navbar-nav">
+                    @foreach(var type in @Model.ChordTypeList)
+                    {
+                        <li><a onclick="updateChordType('@(type.Value)');" data-toggle="collapse" data-target=".navbar-type-collapse">@(type.Key)</a></li>
+                    }
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <nav class="navbar navbar-inverse">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-conv-collapse">
+                        <span class="sr-only">Toggle naming convention</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <span class="navbar-brand" id="navbar-conv">@Model.conv</span>
+                </div>
+                    
+                <div class="navbar-conv-collapse collapse">
+                    <ul class="nav navbar-nav">
+                    @foreach(var conv in @Model.NamingConventions)
+                    {
+                        <li><a href="hybrid:ShowChord?conv=@conv">@conv</a></li>
+                    }
+                    </ul>
+                </div>
+            </div>
+        </nav>
 		<form action="hybrid:ShowChord">
-			<select name="root" title="Root">
-			@foreach(var note in Model.Notes[Model.conv])
-			{
-                <option value="@note">@note</option>
-			}
-			</select>
-            <select name="type" title="Chord type">
-            @foreach(var kvp in Model.ChordTypeList)
-            {
-                <option value="@kvp.Value">@kvp.Key</option>
-            }
-            </select>
-            <select name="conv" title="Naming convention" onchange="updateNamingConvention(this.value);">
-            @foreach(var conv in Model.NamingConventions)
-            {
-				if (Model.conv == conv)
-				{
-                    <option value="@conv" selected>@conv</option>
-				}
-				else
-				{
-                    <option value="@conv">@conv</option>
-				}
-            }
-            </select>
-		    <input type="submit" value="Find" />
-		    <br />
-		    <input type="checkbox" name="partial" value="true" checked="checked" /> Allow partial chords
-		    <input type="checkbox" name="special" value="true" /> Allow special chords
+			<input type="hidden" name="root" id="root" value="@Model.Notes[Model.conv][1]" />
+            <input type="hidden" name="type" id="type" value="" />
+			<input type="hidden" name="conv" id="conv" value="@Model.conv" />
+			<div style="margin-bottom: 20px">
+				<span class="col-xs-9 col-sm-9 col-md-9 col-lg-9">Allow partial chords</span>
+	            <input type="checkbox" name="partial" value="true" data-toggle="toggle" data-on="Yes" data-off="No" checked="checked" />
+            </div>
+			<div style="margin-bottom: 20px">
+				<span class="col-xs-9 col-sm-9 col-md-9 col-lg-9">Allow special chords</span>
+	            <input type="checkbox" name="special" value="true" data-toggle="toggle" data-on="Yes" data-off="No" />
+            </div>
+			<button type="button" class="btn btn-default btn-lg" style="width:100%" onclick="$('form').submit();">Find</button>
 		</form>
 		<div class="error"></div>
 		<div id="findresult"></div>
 		<script type="text/javascript">
-		    function updateNamingConvention(value) {
-		        location = 'hybrid:ShowChord?conv=' + value;
-		    }
+			function updateRoot(value) {
+				$('#navbar-root').html(value);
+				$('#root').val(value);
+			}
+            function updateChordType(value) {
+                $('#navbar-type').html(value);
+                $('#type').val(value);
+            }
 		</script>
 		<!-- Main content end -->
 			
