--- a/Chords.Android/Views/ShowChordLayoutsView.cshtml
+++ b/Chords.Android/Views/ShowChordLayoutsView.cshtml
@@ -24,8 +24,8 @@
                 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="hybrid:ShowChord">Show chord</a></li>
-                    <li><a href="hybrid:FindChord">Find chord</a></li>
+                    <li><a href="hybrid:ShowChord?conv=@Model.Parameters["conv"]">Show chord</a></li>
+                    <li><a href="hybrid:FindChord?conv=@Model.Parameters["conv"]">Find chord</a></li>
                 </ul>
             </div>
         </div>
