--- a/Chords.Android/Views/ShowChordView.cshtml
+++ b/Chords.Android/Views/ShowChordView.cshtml
@@ -22,8 +22,8 @@
                 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="hybrid:ShowChord">Show chord</a></li>
-                    <li><a href="hybrid:FindChord">Find chord</a></li>
+                    <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord</a></li>
+                    <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord</a></li>
                 </ul>
             </div>
         </div>
