--- a/Chords.Android/Views/FindChordView.cshtml
+++ b/Chords.Android/Views/FindChordView.cshtml
@@ -1,6 +1,7 @@
 ﻿﻿@inherits PortableRazor.ViewBase
 @using System.Text.RegularExpressions
 @using PortableRazor.Web.Mvc
+@using Chords.Core.Extensions
 @model Chords.Android.Models.FindChordModel
 @{
     var notes = Model.SelectedNotes != null ? string.Join(",", Model.SelectedNotes) : string.Empty;
@@ -48,7 +49,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <span class="navbar-brand" id="navbar-conv">@Model.conv</span>
+                    <span class="navbar-brand" id="navbar-conv">@(Model.conv.ToDescription())</span>
                 </div>
                     
                 <div class="navbar-conv-collapse collapse">
@@ -57,11 +58,11 @@
                     {
 						if (Model.Strict)
 						{
-	                        <li><a href="hybrid:FindChord?conv=@conv&strict=true&oldconv=@Model.conv&note=@notes">@conv</a></li>
+	                        <li><a href="hybrid:FindChord?conv=@conv&strict=true&oldconv=@Model.conv&note=@notes">@(conv.ToDescription())</a></li>
     					}
 						else
 						{
-                            <li><a href="hybrid:FindChord?conv=@conv&strict=false&oldconv=@Model.conv&note=@notes">@conv</a></li>
+                            <li><a href="hybrid:FindChord?conv=@conv&strict=false&oldconv=@Model.conv&note=@notes">@(conv.ToDescription())</a></li>
 						}
                     }
                     </ul>
