New action: circle of fifths

--- a/Chords.Android/Views/ShowChordResultView.cshtml
+++ b/Chords.Android/Views/ShowChordResultView.cshtml
@@ -27,6 +27,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="hybrid:ShowChord?conv=@Model.Parameters["conv"]">Show chord</a></li>
                     <li><a href="hybrid:FindChord?conv=@Model.Parameters["conv"]">Find chord</a></li>
+					<li><a href="hybrid:Circle?conv=@Model.Parameters["conv"]">Circle of Fifths</a></li>
                 </ul>
             </div>
         </div>
