--- a/Chords.Android/Views/FindChordView.cshtml
+++ b/Chords.Android/Views/FindChordView.cshtml
@@ -30,6 +30,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord</a></li>
                     <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord</a></li>
+					<li><a href="hybrid:Circle?conv=@Model.conv">Circle of fifths</a></li>
                 </ul>
             </div>
         </div>
@@ -80,18 +81,18 @@
                     </button>
 					@if (Model.Strict)
 					{
-                        <span class="navbar-brand" id="navbar-strict">Strict (@Model.Notes[Model.conv][1]<sub>#</sub> = @Model.Notes[Model.conv][4]<sub>b</sub>)</span>
+                        <span class="navbar-brand" id="navbar-strict">Strict mode (@Model.Notes[Model.conv][1]<sub>#</sub> ≠ @Model.Notes[Model.conv][4]<sub>b</sub>)</span>
 					}
 					else
 					{
-                        <span class="navbar-brand" id="navbar-strict">Loose (@Model.Notes[Model.conv][1]<sub>#</sub> ≠ @Model.Notes[Model.conv][4]<sub>b</sub>)</span>
+                        <span class="navbar-brand" id="navbar-strict">Loose mode (@Model.Notes[Model.conv][1]<sub>#</sub> = @Model.Notes[Model.conv][4]<sub>b</sub>)</span>
 					}
                 </div>
                     
                 <div class="navbar-strict-collapse collapse">
                     <ul class="nav navbar-nav">
-						<li><a href="hybrid:FindChord?conv=@Model.conv&strict=true&oldconv=@Model.conv&note=@notes">Strict (@Model.Notes[Model.conv][1]<sub>#</sub> = @Model.Notes[Model.conv][4]<sub>b</sub>)</a></li>
-                        <li><a href="hybrid:FindChord?conv=@Model.conv&strict=false&oldconv=@Model.conv&note=@notes">Loose (@Model.Notes[Model.conv][1]<sub>#</sub> ≠ @Model.Notes[Model.conv][4]<sub>b</sub>)</a></li>
+						<li><a href="hybrid:FindChord?conv=@Model.conv&strict=true&oldconv=@Model.conv&note=@notes">Strict (@Model.Notes[Model.conv][1]<sub>#</sub> ≠ @Model.Notes[Model.conv][4]<sub>b</sub>)</a></li>
+                        <li><a href="hybrid:FindChord?conv=@Model.conv&strict=false&oldconv=@Model.conv&note=@notes">Loose (@Model.Notes[Model.conv][1]<sub>#</sub> = @Model.Notes[Model.conv][4]<sub>b</sub>)</a></li>
                     </ul>
                 </div>
             </div>
