--- a/Chords.Android/Views/CircleView.cshtml
+++ b/Chords.Android/Views/CircleView.cshtml
@@ -19,14 +19,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span class="navbar-brand">Circle of Fifths</span>
+                <span class="navbar-brand">Circle of fifths</span>
             </div>
                 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord</a></li>
                     <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord</a></li>
-					<li><a href="hybrid:Circle?conv=@Model.conv&index=Model.index">Circle of Fifths</a></li>
+					<li><a href="hybrid:Circle?conv=@Model.conv&index=Model.index">Circle of fifths</a></li>
                 </ul>
             </div>
         </div>
@@ -67,18 +67,20 @@
 					var idx = (i + 5) % 12;
 					var id = Model.MajorCircle[Model.conv][idx];
 					var color = i == 1 || i == 2  || i == 12 ? "#4d89d5" : "black";
-
+					var textColor = i == 1 ? "orange" : "white";
+					
                     @(new HtmlString($"\t\t\t\t<path id=\"arc-maj-{i}\" fill=\"none\" stroke=\"{color}\" onclick=\"location.href='hybrid:PlayChord?conv={Model.conv}&id={id}';\" />\n"))
-                    @(new HtmlString($"\t\t\t\t<text id=\"text-maj-{i}\" text-anchor=\"middle\" stroke=\"none\" fill=\"white\" font-size=\"24\" onclick=\"location.href='hybrid:PlayChord?conv={Model.conv}&id={id}';\">{id}</text>\n"))
+                    @(new HtmlString($"\t\t\t\t<text id=\"text-maj-{i}\" text-anchor=\"middle\" stroke=\"none\" fill=\"{textColor}\" font-size=\"24\" onclick=\"location.href='hybrid:PlayChord?conv={Model.conv}&id={id}';\">{id}</text>\n"))
 				}
                 @for(var i = 1; i <= 12; i++)
                 {
                     var idx = (i + 5) % 12;
 					var id = Model.MinorCircle[Model.conv][idx];
                     var color = i == 1 || i == 2 || i == 12 ? "#4d89d5" : "black";
+					var textColor = i == 1 ? "orange" : "white";
 
 					@(new HtmlString($"\t\t\t\t<path id=\"arc-min-{i}\" fill=\"none\" stroke=\"{color}\" onclick=\"location.href='hybrid:PlayChord?conv={Model.conv}&id={id}';\" />\n"))
-                    @(new HtmlString($"\t\t\t\t<text id=\"text-min-{i}\" text-anchor=\"middle\" stroke=\"none\" fill=\"white\" font-size=\"16\" onclick=\"location.href='hybrid:PlayChord?conv={Model.conv}&id={id}';\">{id}</text>\n"))
+                    @(new HtmlString($"\t\t\t\t<text id=\"text-min-{i}\" text-anchor=\"middle\" stroke=\"none\" fill=\"{textColor}\" font-size=\"16\" onclick=\"location.href='hybrid:PlayChord?conv={Model.conv}&id={id}';\">{id}</text>\n"))
                 }
                 @for(var i = 1; i <= 12; i++)
                 {
