--- a/Chords.Android/Views/ShowChordView.cshtml
+++ b/Chords.Android/Views/ShowChordView.cshtml
@@ -25,7 +25,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord</a></li>
                     <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord</a></li>
-					<li><a href="hybrid:Circle?conv=@Model.conv">Circle of Fifths</a></li>
+					<li><a href="hybrid:Circle?conv=@Model.conv">Circle of fifths</a></li>
                 </ul>
             </div>
         </div>
