--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -81,6 +81,14 @@ form select {
     animation: spin 2s linear infinite;
 }
 
+.chord-layout .star {
+    display: none;
+}
+
+.chord-layout[data-favorite='True'] .star {
+    display: inherit;
+}
+
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
