New action: Favorite chords

--- a/Chords.Android/Views/CircleView.cshtml
+++ b/Chords.Android/Views/CircleView.cshtml
@@ -27,6 +27,7 @@
                     <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord</a></li>
                     <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord</a></li>
 					<li><a href="hybrid:Circle?conv=@Model.conv&index=Model.index">Circle of fifths</a></li>
+					<li><a href="hybrid:FavoriteChords?conv=@Model.conv">Favourite chords</a></li>
                 </ul>
             </div>
         </div>
