--- a/Chords.Android/Views/ShowChordResultView.cshtml
+++ b/Chords.Android/Views/ShowChordResultView.cshtml
@@ -28,6 +28,7 @@
                     <li><a href="hybrid:ShowChord?conv=@Model.Parameters["conv"]">Show chord</a></li>
                     <li><a href="hybrid:FindChord?conv=@Model.Parameters["conv"]">Find chord</a></li>
 					<li><a href="hybrid:Circle?conv=@Model.Parameters["conv"]">Circle of fifths</a></li>
+					<li><a href="hybrid:FavoriteChords?conv=@Model.Parameters["conv"]">Favourite chords</a></li>
                 </ul>
             </div>
         </div>
