--- a/Chords.Android/Views/FindChordView.cshtml
+++ b/Chords.Android/Views/FindChordView.cshtml
@@ -31,6 +31,7 @@
                     <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord</a></li>
                     <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord</a></li>
 					<li><a href="hybrid:Circle?conv=@Model.conv">Circle of fifths</a></li>
+					<li><a href="hybrid:FavoriteChords?conv=@Model.conv">Favourite chords</a></li>
                 </ul>
             </div>
         </div>
