--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -12,6 +12,12 @@ input {
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .main-content {
